# coffee-stop1

./: .env.example  .env.prod.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-and-push-ghcr.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  schema.sql
backend/app/: __init__.py  config.py  database.py  emailer.py  main.py  schemas.py
backend/app/routers/: barista.py  barista_menu.py  health.py  public_menu.py  public_orders.py  public_stores.py  webhooks.py
backend/migrations/: 001_menu_items_stock_qty.sql  002_payments_evotor_fiscal_fields.sql  003_menu_item_params.sql
backend/scripts/: seed_dev.py
deploy/nginx/conf.d/: coffee-stop.conf
deploy/yc/: cloud-init.yaml  yc-quickstart.sh
docs/: drinkit_order_process_replication.md  pass-rd.txt  plan.md
docs/diagrams/: db-to-guest-pickup-flow.md  drinkit-order-flow-diagram.drawio
docs/requirements/: README.md  api-v1.md  deployment-global-https-plan.md  deployment-hetzner-cloudflare-playbook.md  deployment-yandex-cloud-playbook.md  deployment-yandex-cloud-quickstart-a.md  domain-model.md  ops-dev-runbook.md  order-flow.md  stack.md  stage0-decisions.md
docs/requirements/payments/: evotor-digital-cashbox.md  evotor-integration-production-requirements.md  evotor-mobile-cashier-checkout-mvp.md  evotor-mobile-cashier-positions-mapping.md  implementation-checklist.md  (+6 more)
frontend-barista/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend-guest/: README.md  package-lock.json  package.json
(+45 files in other folders)
